--- a/index.html
+++ b/index.html
@@ -71,6 +71,6 @@ body
 </table>
 </div>
 
-
+<a href="https://simranjeet3551.github.io/assessment-project/">CLICK TO GO TO MY WEBSITE</a>
 </body>
 </html>
