--- a/index.html
+++ b/index.html
@@ -69,6 +69,14 @@ body
     <td>2014</td>
   </tr>
 </table>
+  <h1><u>SKILS</u></h1>
+  1.C language
+  2.java
+  3.HTML
+  4.CSS and Java script
+  <h1>Projects</h1>
+  1.Done a project on Arduino.
+  2.Done a Project In CST.
 </div>
 
 <a href="https://simranjeet3551.github.io/assessment-project/">CLICK TO GO TO MY WEBSITE</a>
