--- a/index.html
+++ b/index.html
@@ -70,13 +70,13 @@ body
   </tr>
 </table>
   <h1><u>SKILS</u></h1>
-  1.C language
-  2.java
-  3.HTML
-  4.CSS and Java script
+  1.C language<br>
+  2.java<br>
+  3.HTML<br>
+  4.CSS and Java script<br>
   <h1>Projects</h1>
-  1.Done a project on Arduino.
-  2.Done a Project In CST.
+  1.Done a project on Arduino.<br>
+  2.Done a Project In CST.<br>
 </div>
 
 <a href="https://simranjeet3551.github.io/assessment-project/">CLICK TO GO TO MY WEBSITE</a>
