--- a/index.html
+++ b/index.html
@@ -69,12 +69,12 @@ body
     <td>2014</td>
   </tr>
 </table>
-  <h1><u>SKILS</u></h1>
+  <h1><u>SKILlS</u></h1>
   1.C language<br>
   2.java<br>
   3.HTML<br>
   4.CSS and Java script<br>
-  <h1>Projects</h1>
+  <h1><u>Projects</u></h1>
   1.Done a project on Arduino.<br>
   2.Done a Project In CST.<br>
 </div>
