--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ body
     <td>2014</td>
   </tr>
 </table>
-  <h1><u>SKILlS</u></h1>
+  <h1><u>SKILLS</u></h1>
   1.C language<br>
   2.java<br>
   3.HTML<br>
