--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ body
 </style>
 </head>
 <body>
-<img src = "harley-davidson-1HZcJjdtc9g-unsplash.jpg" width="300" height="200">
+<img src = "aman.jpg" width="150" height="150">
 <h2>Name: Simranjeet Singh</h2>
 <h2>D.O.B. : 27/01/99</h2>
 <h2>Address : #280, vill:- khanpur barring ,Rajpura</h2>
