--- a/index.html
+++ b/index.html
@@ -69,14 +69,17 @@ body
     <td>2014</td>
   </tr>
 </table>
-  <h1><u>SKILLS</u></h1>
-  1.C language<br>
-  2.java<br>
-  3.HTML<br>
-  4.CSS and Java script<br>
-  <h1><u>Projects</u></h1>
-  1.Done a project on Arduino.<br>
-  2.Done a Project In CST.<br>
+  <center><h1><u>SKILLS</u></h1></center>
+    1.C language<br>
+    2.java<br>
+    3.HTML<br>
+    4.CSS and Java script<br>
+    5.DBMS<br>
+    6.C++<br>
+  <center><h1><u>PROJECTS</u></h1></center>
+    1.Done a project on shoe cleaning machine using Arduino.<br>
+    2.Done a project using HTML CSS and JS in CST.<br>
+    3.Done a project ATLAS(App Time Limit Alerting System) in SE.<br>
 </div>
 
 <a href="https://simranjeet3551.github.io/assessment-project/">CLICK TO GO TO MY WEBSITE</a>
