--- a/index.html
+++ b/index.html
@@ -40,9 +40,8 @@ body
 <body>
 <img src = "aman1.jpg" width="150" height="150">
 <h2>Name: Simranjeet Singh</h2>
-<h2>D.O.B. : 27/01/99</h2>
-<h2>Address : #280, vill:- khanpur barring ,Rajpura</h2>
-<h2>Phone : 79737#####</h2>
+<h2>Address : Rajpura</h2>
+<h2>Contact : 7973753551</h2>
 
 <div class="vl">
 <h2>&nbsp&nbspEducational Qualifications:</h2>
